--- a/HTML/css/styles.css
+++ b/HTML/css/styles.css
@@ -1,5 +1,5 @@
 body{
-    background-color: white;
+    background-color: #f1f1f1;
 }
 
 /* p{
@@ -18,16 +18,98 @@ body{
     margin-top: 0;
 } */
 
+.w-50 {
+    width: 50%;
+}
+
+.w-40 {
+    width: 40%;
+}
+
+.edit-cell {
+    text-align: center;
+}
+
+.edit-cell a {
+    text-decoration: none;
+    background-color: #e47676;
+    padding: 4px 8px;
+    margin: 2px 0;
+    display: inline-block;
+    color: white;
+    border-radius: 4px;
+}
+
+.edit-cell a:hover {
+    background-color: #c45858;
+}
+
+table.contained {
+    margin: 0 15%;
+    width: 70%;
+}
+
 table {
-    border: 1px solid black;
+    /* border: 1px solid black; */
+    /* border: 1px solid #f08080; */
     width: 100%;
     border-spacing: 0;
+    border-collapse: collapse;
 }
 
 th {
     text-align: start;
-    background-color: #b3b3b3;
+    background-color: #d96c6d;
     padding: 8px 4px;
+}
+
+tr {
+    border-bottom: 1px solid #fc8a8a;
+}
+
+tfoot tr {
+    border-bottom: 0;
+}
+
+tfoot tr.sum td {
+    text-align: right;
+}
+
+small {
+    font-size: 12px;
+}
+
+.edit-titulo {
+    text-align: center;
+    background-color: #b84648;
+    padding: 10px;
+    margin: 2px 0;
+    border-radius: 4px;
+    color: #f1f1f1;
+}
+
+ul.navlist li a {
+    text-decoration: none;
+    background-color: #e47676;
+    padding: 4px 8px;
+    margin: 2px 0;
+    display: block;
+    color: white;
+    border-radius: 4px;
+}
+
+ul {
+    width: 15%;
+    margin: 0 auto;
+}
+
+ul.navlist li a:hover {
+    background-color: #c45858;
+}
+
+ul.navlist {
+    text-align: center;
+    list-style: none;
 }
 
 * {
