--- a/HTML - bootstrap/css/style.css
+++ b/HTML - bootstrap/css/style.css
@@ -100,7 +100,7 @@ h2 {
   }
   
   input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover  {
-    background-color: white;
+    background-color: #b882b2;
   }
   
   input[type=button]:active, input[type=submit]:active, input[type=reset]:active  {
