--- a/HTML/css/styles.css
+++ b/HTML/css/styles.css
@@ -135,6 +135,21 @@ div.titulos {
     margin-right: auto;
 }
 
+div.forms {
+    background-color: #ffeae9;
+    box-shadow: 0px 8px 20px -8px #000000;
+    border-radius: 12px;
+    padding: 24px;
+    margin-bottom: 32px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.password {
+    border: none;
+    border-radius: 1px solid black;
+}
+
 * {
     font-family: 'Poppins';
 }
