--- a/projeto-angular/src/app/app.component.html
+++ b/projeto-angular/src/app/app.component.html
@@ -276,3 +276,8 @@
 </div> -->
 
 <app-heroes-screen></app-heroes-screen>
+
+<!-- <app-sizer [(size)]="fontSizePx"></app-sizer>
+<div [style.font-size.px]="fontSizePx">Resizable Text</div> -->
+
+<!-- <app-favorite-color></app-favorite-color> -->
