--- a/projeto-angular/src/app/heroes/heroes-screen/heroes-screen.component.html
+++ b/projeto-angular/src/app/heroes/heroes-screen/heroes-screen.component.html
@@ -3,3 +3,5 @@
 <div *ngFor="let hero of heroes">
     <app-hero-list-item [hero]="hero"></app-hero-list-item>
 </div>
+
+<app-heroes-form></app-heroes-form>
